fixed x overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -219,6 +219,8 @@ html,
 body,
 #__next {
   height: 100%;
+
+  overflow-x: hidden;
 }
 
 .btn-hero {
